--- a/resources/sass/forum_layout.scss
+++ b/resources/sass/forum_layout.scss
@@ -22,6 +22,7 @@ body {
     display: block;
     background-color: $color-scheme;
     height: 15vh;
+    min-height: 7vh;
     width: 100vw;
     text-align: center;
     margin-bottom: 1vh;
